--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+git+https://github.com/pegasus-isi/pegasus.git@master#egg=pegasus-wms&subdirectory=lib/pegasus/python
 # core requirements
 attrs==19.2.0
 vistautils==0.19.0
