--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,10 @@
 git+https://github.com/pegasus-isi/pegasus.git@master#egg=pegasus-wms&subdirectory=lib/pegasus/python
+git+https://github.com/isi-vista/saga-tools.git@master#egg=saga-tools
 # core requirements
 attrs==19.2.0
-vistautils==0.19.0
-immutablecollections==0.9.0
+vistautils==0.20.0
+immutablecollections==0.10.0
+temppathlib==1.0.3
 
 
 # extras for development
