--- a/requirements.txt
+++ b/requirements.txt
@@ -5,7 +5,7 @@ attrs==19.2.0
 vistautils==0.20.0
 immutablecollections==0.10.0
 temppathlib==1.0.3
-
+networkx==2.3
 
 # extras for development
 black==19.3b0
