--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
-git+https://github.com/pegasus-isi/pegasus.git@4.9#egg=pegasus-wms&subdirectory=lib/pegasus/python
+git+https://github.com/pegasus-isi/pegasus.git@7d70c4a18f4df30090c830c5b07f388df88b44e2#egg=pegasus-wms&subdirectory=lib/pegasus/python
 git+https://github.com/isi-vista/saga-tools.git@master#egg=saga-tools
 # core requirements
 attrs==19.2.0
