--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,7 @@ attrs==19.2.0
 vistautils==0.20.0
 immutablecollections==0.10.0
 networkx==2.3
+importlib-resources==1.4.0
 
 # extras for development
 black==19.3b0
