--- a/.travis.yml
+++ b/.travis.yml
@@ -14,6 +14,9 @@ before_install:
     - sudo apt-get update
     - sudo apt-get install pegasus
     - sudo apt-get install htcondor
+    - sudo systemctl start condor
+    - sudo systemctl enable condor
+    - ps ax | grep condor
 
 install:
     - pip install -r requirements.txt
