Add logging information to basic scripts to allow for work on #26

--- a/pegasus_wrapper/resources/pegasus.conf
+++ b/pegasus_wrapper/resources/pegasus.conf
@@ -2,8 +2,7 @@
 pegasus.catalog.site.file=sites.xml
 
 # This tells Pegasus where to find the Replica Catalog
-pegasus.catalog.replica=File
-pegasus.catalog.replica.file=rc.txt
+pegasus.catalog.replica=Directory
 
 # This tells Pegasus where to find the Transformation Catalog
 pegasus.catalog.transformation=Text
