restore this branch to remove the testing for directory representation of replica catalog

--- a/pegasus_wrapper/resources/pegasus.conf
+++ b/pegasus_wrapper/resources/pegasus.conf
@@ -2,7 +2,7 @@
 pegasus.catalog.site.file=sites.xml
 
 # This tells Pegasus where to find the Replica Catalog
-pegasus.catalog.replica=Directory
+pegasus.catalog.replica=File
 
 # This tells Pegasus where to find the Transformation Catalog
 pegasus.catalog.transformation=Text
@@ -19,4 +19,3 @@ pegasus.monitord.encoding = json
 pegasus.catalog.workflow.amqp.url = amqp://friend:donatedata@msgs.pegasus.isi.edu:5672/prod/workflows
 
 dagman.retry=0
-
