--- a/pegasus_wrapper/resources/pegasus.conf
+++ b/pegasus_wrapper/resources/pegasus.conf
@@ -3,6 +3,7 @@ pegasus.catalog.site.file=sites.xml
 
 # This tells Pegasus where to find the Replica Catalog
 pegasus.catalog.replica=File
+pegasus.catalog.replica.file=rc.txt
 
 # This tells Pegasus where to find the Transformation Catalog
 pegasus.catalog.transformation=Text
