Add docstrings, update replica catalog to correct work dir, err on invalid walltime for partition

--- a/pegasus_wrapper/resources/pegasus.conf
+++ b/pegasus_wrapper/resources/pegasus.conf
@@ -1,10 +1,6 @@
 # This tells Pegasus where to find the Site Catalog
 pegasus.catalog.site.file=sites.xml
 
-# This tells Pegasus where to find the Replica Catalog
-pegasus.catalog.replica=File
-pegasus.catalog.replica.file=rc.txt
-
 # This tells Pegasus where to find the Transformation Catalog
 pegasus.catalog.transformation=Text
 pegasus.catalog.transformation.file=tc.txt
@@ -20,3 +16,5 @@ pegasus.monitord.encoding = json
 pegasus.catalog.workflow.amqp.url = amqp://friend:donatedata@msgs.pegasus.isi.edu:5672/prod/workflows
 
 dagman.retry=0
+
+# We add an entry describing the Replica Catalog and its location in the workflow
