--- a/requirements.txt
+++ b/requirements.txt
@@ -3,7 +3,7 @@ pegasus-wms.api==5.0.0
 git+https://github.com/isi-vista/saga-tools.git@master#egg=saga-tools
 PyYAML==5.3.1
 
-#Pegasus Requirement
+#Pegasus Requirement - Needed to run the submit script
 gitpython==3.1.12
 
 # core requirements
