--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,9 @@
 pegasus-wms.api==5.0.0
 git+https://github.com/isi-vista/saga-tools.git@master#egg=saga-tools
-PyYAML==5.4
+PyYAML>=5.4
 
 #Pegasus Requirement - Needed to run the submit script
-gitpython==3.1.12
+gitpython>=3.1.12
 
 # core requirements
 attrs==19.2.0
